// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={2}
          >
            <View>
              <Image
                caption={<MockCaption />}
                fadeDuration={0}
                fadeImageIn={false}
                onImagePress={null}
                show={false}
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                  }
                }
              />
            </View>
            <View>
              <View>
                <Image
                  caption={<MockCaption />}
                  fadeDuration={0}
                  fadeImageIn={false}
                  onImagePress={null}
                  show={false}
                  source={
                    Object {
                      "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={2}
    >
      <View>
        <Image
          caption={<MockCaption />}
          fadeDuration={0}
          fadeImageIn={false}
          onImagePress={null}
          show={false}
          source={
            Object {
              "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
            }
          }
        />
      </View>
      <View>
        <View
          height="100%"
          width="100%"
        >
          <Image
            fadeDuration={0}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/t.png",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={2}
          >
            <View>
              <Image
                caption={null}
                fadeDuration={0}
                fadeImageIn={false}
                onImagePress={null}
                show={false}
                source={null}
              />
            </View>
            <View>
              <View
                height="100%"
                width="100%"
              >
                <Image
                  fadeDuration={0}
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../packages/image/assets/t.png",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      />
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={2}
    >
      <View>
        <Image
          caption={null}
          fadeDuration={0}
          fadeImageIn={false}
          onImagePress={null}
          show={false}
          source={null}
        />
      </View>
      <View>
        <View
          height="100%"
          width="100%"
        >
          <Image
            fadeDuration={0}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/t.png",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={2}
          >
            <View>
              <Image
                caption={<MockCaption />}
                fadeDuration={0}
                fadeImageIn={false}
                onImagePress={null}
                show={false}
                source={
                  Object {
                    "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                  }
                }
              />
            </View>
            <View>
              <View>
                <Image
                  caption={<MockCaption />}
                  fadeDuration={0}
                  fadeImageIn={false}
                  onImagePress={null}
                  show={false}
                  source={
                    Object {
                      "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={2}
    >
      <View>
        <Image
          caption={<MockCaption />}
          fadeDuration={0}
          fadeImageIn={false}
          onImagePress={null}
          show={false}
          source={
            Object {
              "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
            }
          }
        />
      </View>
      <View>
        <View
          height="100%"
          width="100%"
        >
          <Image
            fadeDuration={0}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/t.png",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`9. hides elements when tapping on the image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={true}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View />
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={2}
          >
            <View>
              <Image
                caption={<MockCaption />}
                fadeDuration={0}
                fadeImageIn={false}
                onImagePress={null}
                show={true}
                source={null}
              />
            </View>
            <View>
              <View
                height="100%"
                width="100%"
              >
                <Image
                  fadeDuration={0}
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../packages/image/assets/t.png",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </Gestures>
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={2}
    >
      <View>
        <Image
          caption={<MockCaption />}
          fadeDuration={0}
          fadeImageIn={false}
          onImagePress={null}
          show={true}
          source={null}
        />
      </View>
      <View>
        <View
          height="100%"
          width="100%"
        >
          <Image
            fadeDuration={0}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/t.png",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`10. re-shows elements when tapping on the image a second time 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={true}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={2}
          >
            <View>
              <Image
                caption={<MockCaption />}
                fadeDuration={0}
                fadeImageIn={false}
                onImagePress={null}
                show={true}
                source={null}
              />
            </View>
            <View>
              <View
                height="100%"
                width="100%"
              >
                <Image
                  fadeDuration={0}
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../packages/image/assets/t.png",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={2}
    >
      <View>
        <Image
          caption={<MockCaption />}
          fadeDuration={0}
          fadeImageIn={false}
          onImagePress={null}
          show={true}
          source={null}
        />
      </View>
      <View>
        <View
          height="100%"
          width="100%"
        >
          <Image
            fadeDuration={0}
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/t.png",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
